2015-02-23  Per Bothner  <per@bothner.com>

	* ReaderTypespec.java (read): Allow non-terminating-macro characters.
	After '>' call readToken to handle anything else.
	* LispReader.java (handleToken): New method
	(readAndHandleToken): Use handleToken.

2014-12-22  Per Bothner  <per@bothner.com>

	* LangObjType.java (emitCoercionOrNull): New method.
	(emitTestIf): Use emitCoercionOrNull.

	* SeqSizeType.java: New class, extends LangObjType.

2014-12-21  Per Bothner  <per@bothner.com>

	* LangObjType.java (coercionMethod): For default case, return null
	if getConstructor() returns null.

2014-12-18  Per Bothner  <per@bothner.com>

	* LangObjType.java (emitTestIf): Fix handling for types without
	a coercion method.

2014-12-09  Per Bothner  <per@bothner.com>

	* LangPrimType.java (emitTestIf): Fix handling of boolean,
	character, character-or-eof, and char types.
	(emitIsInstance): Remove special handling for booleans.

2014-11-24  Per Bothner  <per@bothner.com>

	* LispLanguage.java (quasiquote_sym): New constant.
	* LispReader.java (handlePostfix): Use quasiquote rather than quote
	for colon notation.

2014-11-17  Per Bothner  <per@bothner.com>

	* LispLanguage.java (resolve): Error if module has both statements
	and a submodule with the same classname.

2014-11-17  Jamison Hope  <jrh@theptrgroup.com>

	* LispReader.java (parseNumber): Add support for quaternion
	literals.

2014-11-03  Per Bothner  <per@bothner.com>

	* BracketApply.java (rewrite): Generalize handling of ParameterizedType
	to LangObjType and other language-specific types.

2014-10-27  Per Bothner  <per@bothner.com>

	* LispReader.java (readAndHandleToken): Complain if token is ".".

2014-10-24  Per Bothner  <per@bothner.com>

	* ReaderParens.java (readList): Report error if no value after '.'.

2014-10-13  Per Bothner  <per@bothner.com>

	* LispLanguage.java (parse): Check if reader is null.

	* LispLanguage.java: Use new setPedantic method.

2014-09-23  Per Bothner  <per@bothner.com>
