@@ -1,3 +1,7 @@
+2015-03-18  Per Bothner  <per@bothner.com>
+
+	* StringCursor.java: New class.
+
 2015-02-19  Per Bothner  <per@bothner.com>
 
 	* ResourceStreamHandler.java (clas): New Class field.
